--- a/Scientific Calculator - JavaScript/Style/style.css
+++ b/Scientific Calculator - JavaScript/Style/style.css
@@ -16,9 +16,9 @@ body {
 }
 
 #form_wrapper {
-    width: 330px;
-    height: 400px;
-    margin: 30px auto auto 420px;
+    width: 300px;
+    height: 440px;
+    margin: auto auto auto auto;
     background-color: #0C0C0C;
     text-align: center;
     border-radius: 10px;
@@ -31,7 +31,7 @@ body {
 }
 
 #display {
-    width: 320px;
+    width: 290px;
     height: 40px;
     font-size: 18px;
     color: black;
@@ -46,23 +46,48 @@ body {
     width: 50px;
     height: 50px;
     margin: 0.5px;
-    background-color: #6F6E6E
+    background-color: #6F6E6E;
+    text-align: center;
 }
 
 .number {
-    font-size: 16px;
+    font-size: 155px;
     font-weight: bold;
+    text-align: center;
 }
 
 .opps {
     font-size: 18px;
+    background-color: #FDAE05;
+}
+
+.delete{
+    background-color: #FD0505;
 }
 
 .three {
     font-weight: bold;
-    background-color: #6F6E6E;
 }
 
 .three:hover {
     background-color: #6F6E6E;
 }
+
+.btn-primary {
+    color: #fff;
+    background-color: #6F6E6E;
+    border-color: #080808;
+
+  }
+
+.btn-primary:hover {
+    color: #fff;
+    background-color: #505050;
+    border-color: #FD0505;
+  }
+
+  .btn:hover {
+    color: #fff;
+    border-color: #FD7005;
+  }
+  
